syntax = "proto3";

option java_package = "com.example.demo.GRPC";
option java_outer_classname = "RequestProto";

package com.example.demo.GRPC;

message Request {
    int32 requestId = 1;
    int32 employeeId = 2;
    string requestType = 3; 
    string requestDate = 4;
    string startTime = 5; 
    string endTime = 6;   
    string status = 7;    
    int32 approverId = 8;
}

message RequestResponse {
    int32 requestId = 1;
    string status = 2;
}

service RequestService {
    rpc CreateRequest (Request) returns (RequestResponse);
    rpc UpdateRequest (Request) returns (RequestResponse);
    rpc GetRequest (Request) returns (RequestResponse);
    rpc ApproveRequest (Request) returns (RequestResponse);
}
